--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
       </div>
     </div>
   </div>
-  <!--/ Intro Skew End /-->
 
   <section id="about" class="about-mf sect-pt4 route">
     <div class="container">
@@ -88,7 +87,7 @@
                       <p><span class="title-s">Profile: </span> <span>Programmer Analyst Intern</span></p>
                       <p><span class="title-s">Email: </span> <span><a href="mailto:krishna010502@gmail.com">krishna010502@gmail.com</a></span></p>
                       <p><span class="title-s">Phone: </span> <span>+91 8827863780</span></p>
-                      <p><span class="title-s">Address: </span> <span>Indore, Madhya Pradesh</span></p>
+                      <p><span class="title-s">Address: </span> <span>Dewas, Madhya Pradesh</span></p>
                       <p><span class="title-s">LinkedIn: </span> <span><a style="color:blue" href="https://www.linkedin.com/in/krishnxsoni/">Click here</a> to follow Me!</span></p>
                       <a href="https://drive.google.com/file/d/1eB9P6ntp7Qb7VhzsZO4liVPkP0ZSl4_H/view?usp=sharing"><button type="submit" class="title-s" style="border:2px solid;border-radius: 10px;background-color: rgb(40, 40, 229); color: white; font-weight:500;cursor: pointer;">Resume</button></a>
                     </div>
@@ -127,7 +126,7 @@
                   </div>
                   <p class="lead">
                     <b>Hello There!</b>
-                    I am currently a Pre-Final Year, Computer Science student at Indore Institute of Science and Technology. Actively looking for good opportunities to Learn and Skill-Up.
+                    I am currently a Final Year, Computer Science student at Indore Institute of Science and Technology. Actively looking for good opportunities to Learn and Skill-Up.
                   </p>
                   <br>
                   <p class="lead">
