--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
               <span class="ico-circle"><i class="ion-cloud"></i></span>
             </div>
             <div class="service-content">
+              <h2>AWS/Cloud</h2>
             </div>
           </div>
         </div>
