fixed bugs in index.html

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               <span class="ico-circle"><i class="ion-cloud"></i></span>
             </div>
             <div class="service-content">
-              <h2>AWS/Cloud</h2>
+              <h2 class="s-title">AWS/Cloud</h2>
             </div>
           </div>
         </div>
